<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.avaje</groupId>
    <artifactId>java11-oss</artifactId>
    <version>3.9</version>
    <relativePath/>
  </parent>

  <groupId>org.example</groupId>
  <artifactId>example-jetty</artifactId>
  <version>1</version>

  <properties>
    <java.release>17</java.release>
    <native.maven.plugin.version>0.9.16</native.maven.plugin.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.2.11</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jex-jetty</artifactId>
      <version>2.6-SNAPSHOT</version>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>io.avaje</groupId>-->
<!--      <artifactId>avaje-jex-loomjetty</artifactId>-->
<!--      <version>1.1</version>-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
<!--      <artifactId>jackson-databind</artifactId>-->
<!--      <version>2.13.3</version>-->
<!--    </dependency>-->

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb</artifactId>
      <version>1.1</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb-generator</artifactId>
      <version>1.1</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject</artifactId>
      <version>8.11</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject-generator</artifactId>
      <version>8.11</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-api</artifactId>
      <version>1.21</version>
    </dependency>

    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-http-jex-generator</artifactId>
      <version>1.21</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.repaint.maven</groupId>
        <artifactId>tiles-maven-plugin</artifactId>
        <version>2.22</version>
        <extensions>true</extensions>
        <configuration>
          <tiles>
            <tile>org.avaje.tile:lib-classpath:1.1</tile>
          </tiles>
        </configuration>
      </plugin>
    </plugins>
  </build>


  <profiles>
    <profile>
      <id>native</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>${native.maven.plugin.version}</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>build</goal>
                </goals>
                <phase>package</phase>
              </execution>
              <execution>
                <id>test-native</id>
                <goals>
                  <goal>test</goal>
                </goals>
                <phase>test</phase>
              </execution>
            </executions>
            <configuration>
              <metadataRepository>
                <enabled>true</enabled>
              </metadataRepository>
              <imageName>mytest</imageName>
              <mainClass>org.example.JMain</mainClass>
              <buildArgs>
                <!-- needed for jdk.httpserver module -->
                <buildArg>-J--add-modules</buildArg>
                <buildArg>-JALL-SYSTEM</buildArg>
                <buildArg>--no-fallback</buildArg>
                <buildArg>--allow-incomplete-classpath</buildArg>
                <buildArg>-H:IncludeResources=".*/logback\\.xml"</buildArg>
<!--                <buildArg>-H:IncludeResources="content/.*"</buildArg>-->
                <buildArg>-H:ReflectionConfigurationFiles=graalvm-meta/reflection.json</buildArg>
                <!--                <buildArg>&#45;&#45;initialize-at-build-time=org.slf4j.simple.SimpleLogger</buildArg>-->
                <!--                <buildArg>&#45;&#45;initialize-at-build-time=org.slf4j.simple.SimpleLogger$1</buildArg>-->
                <!--                <buildArg>&#45;&#45;trace-object-instantiation=org.slf4j.simple.SimpleLogger</buildArg>-->
              </buildArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
